[package]
name = "wikidata_entity_service"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
md-5 = "0.10.6"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = "full"

[build]
rustdocflags = ["-C", "target-cpu=native"]
rustflags = ["-g", "-C", "target-cpu=native"]
